# coherence_engine

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  coherence_protocol_data_coherence_engine_v_0.py  project_overview.md  pyproject.toml  pytest.ini  requirements.txt
app/: api.py  schemas.py
app/compute/: metrics.py
app/ingest/: darshan_client.py
app/persistence/: base.py  csv_store.py  sqlite_store.py
automation/: drift_sentry.py
data/: mock_signals.json
streamlit_app/: app.py
streamlit_app/pages/: 01_Incidents.py
tests/: conftest.py  test_api.py  test_api_metrics.py  test_drift_sentry.py  test_health.py  test_history_api.py  test_incident_emitter.py  test_ingest_darshan.py  test_metrics.py  test_metrics_math.py  test_persistence.py  test_status.py
