[project]
name = "coherence-engine"
version = "0.1.0"
description = "Lightweight Data Coherence Engine (FastAPI)"
readme = "README.md"
requires-python = ">=3"
authors = [{name="Sheldon H. Gordon"}]

dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "pydantic",
  "python-dotenv",
  "pandas",
  "numpy",
  "streamlit"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-httpx",
  "tenacity",
  "black"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py3"]
